<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/s_2"
    android:orientation="vertical"
    android:padding="15dp" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/bg_reg_lbg"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >


        <EditText
            android:id="@+id/re_et_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/bg_reg_lvbg"
            android:hint="@string/name"
            android:padding="10dp"
            android:singleLine="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
            android:gravity="center" />



        <EditText
            android:id="@+id/re_et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/bg_reg_lvbg"
            android:hint="@string/email"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:gravity="center" />



        <EditText
            android:id="@+id/re_et_pass1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/bg_reg_lvbg"
            android:hint="@string/password"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:gravity="center" />


        <EditText
            android:id="@+id/re_et_pass2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/bg_reg_lvbg"
            android:hint="@string/password"
            android:padding="10dp"
            android:singleLine="true"
           android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:gravity="center" />


        <EditText
            android:id="@+id/re_et_mobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/bg_reg_lvbg"
            android:hint="@string/mobile"
            android:padding="10dp"
            android:singleLine="true"
android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:gravity="center" />



        <!-- Login Button -->

        <Button
            android:id="@+id/re_bt_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/bt_reg_bg"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:gravity="center" />


        <!-- Link to Login Screen -->


        <Button
            android:id="@+id/re_bt_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:gravity="center" />

    </LinearLayout>
</LinearLayout>
